# Seoulana-2026

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/xpay_insider/: Cargo.toml
anchor/programs/xpay_insider/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx
app/api/insider/: route.ts
app/api/posts/[id]/: route.ts
app/api/verify-email/: route.ts
components/: Header.tsx  UsageDashboard.tsx  WalletProvider.tsx
components/company/: CompanyProfile.tsx
components/insider/: InsiderEditor.tsx  InsiderPostCard.tsx  InsiderPostList.tsx
components/layout/: Sidebar.tsx
hooks/: useAuth.tsx  useUnlockStore.ts  useVoteStore.ts
lib/: store.ts  utils.ts  x402.ts
lib/anchor/: idl.json  program.ts
lib/data/: companies.ts  insiderPosts.ts
types/: index.ts
