[package]
name = "xpay-insider"
version = "0.1.0"
description = "xPay Insider - on-chain review registration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xpay_insider"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-lang-idl-spec = "=0.1.0"
